@@ -1,0 +1,17 @@
+TEST
+(GraphicsLayer
+  (bounds 800.00 600.00)
+  (children 1
+    (GraphicsLayer
+      (bounds 800.00 600.00)
+      (children 1
+        (GraphicsLayer
+          (position 8.00 8.00)
+          (bounds 100.00 30.00)
+          (drawsContent 1)
+        )
+      )
+    )
+  )
+)
+
