@@ -1,3 +1,15 @@
+2013-01-04  Xianzhu Wang  <wangxianzhu@chromium.org>
+
+        Test compositing and slow scrolling behavior of fixed position elements under transformed elements
+        https://bugs.webkit.org/show_bug.cgi?id=103470
+
+        Reviewed by Simon Fraser.
+
+        Add test case for the behavior change about fixed position elements under transformed elements in bug 102543 by the way.
+
+        * compositing/layer-creation/no-compositing-for-fixed-position-under-transform-expected.txt: Added.
+        * compositing/layer-creation/no-compositing-for-fixed-position-under-transform.html: Added.
+
 2013-01-04  Tony Chang  <tony@chromium.org>
 
         Remove some autogenerated settings from InternalSettings.idl
